# baxter_pick_and_place

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ____init_____8py_source.html  _r_e_a_d_m_e_8md_source.html  annotated.html  axxa_8py_source.html  baxter_8py_source.html  calibration_2____init_____8py_source.html  classsrc_1_1calibration_1_1external_1_1_external-members.html  classsrc_1_1calibration_1_1external_1_1_external.html  classsrc_1_1demo_1_1joint__pick__and__place_1_1_pick_and_place.html  classsrc_1_1hardware_1_1base_1_1_camera.html  classsrc_1_1hardware_1_1baxter_1_1_baxter-members.html  classsrc_1_1hardware_1_1baxter_1_1_baxter.html  classsrc_1_1hardware_1_1kinect_1_1_kinect.html  classsrc_1_1instruction_1_1keyboard_1_1_keyboard_input-members.html  classsrc_1_1instruction_1_1keyboard_1_1_keyboard_input.html  classsrc_1_1motion__planning_1_1base_1_1_motion_planner-members.html  classsrc_1_1motion__planning_1_1base_1_1_motion_planner.html  classsrc_1_1motion__planning_1_1simple_1_1_simple_planner-members.html  classsrc_1_1motion__planning_1_1simple_1_1_simple_planner.html  classsrc_1_1servoing_1_1base_1_1_servoing-members.html  classsrc_1_1servoing_1_1base_1_1_servoing.html  classsrc_1_1servoing_1_1distance_1_1_servoing_distance.html  classsrc_1_1servoing_1_1size_1_1_servoing_size.html  classsrc_1_1simulation_1_1environment_1_1_environment.html  classsrc_1_1vision_1_1detection2_1_1_object_detection.html  classsrc_1_1vision_1_1detection_1_1_object_detection.html  classsrc_1_1vision_1_1segmentation2_1_1_object_segmentation.html  classsrc_1_1vision_1_1segmentation_1_1_object_segmentation-members.html  classsrc_1_1vision_1_1segmentation_1_1_object_segmentation.html  client_8py_source.html  core_2____init_____8py_source.html  debug_8py_source.html  demo_2____init_____8py_source.html  depth__registration_8py_source.html  detection2_8py_source.html  detection_8py_source.html  (+41 more)
cfg/: Cam.cfg  CamConfig.cfg  Canny.cfg  CannyConfig.cfg
docs/: Doxyfile
doxygen/: Doxyfile
launch/: baxter.launch  baxter_sdk_control.launch  demonstration.launch  simulation.launch
scripts/: README.md  Untitled.ipynb  assemble_data.py  caffe_classify.py  calibrate_external.py  calibrate_kinect.py  cam_config_server.py  canny_server.py  cv.py  cv_1.py  cv_2.py  cv_3.py  cv_4.py  demonstration.py  inspection.py  instruct.py  instruction.py  opencv_0_dat_neg.ipynb  opencv_1_dat_pos.ipynb  opencv_2_augment.ipynb  opencv_3_train.ipynb  opencv_4_test.ipynb  opencv_augment.ipynb  opencv_dat.ipynb  opencv_dat2vec.sh  opencv_dat_neg.ipynb  opencv_test.ipynb  opencv_train.ipynb  opencv_train.sh  record_image.py  (+2 more)
(+128 files in other folders)
