<?xml version="1.0"?>
<package>
  <name>baxter_pick-and-place</name>
  <version>0.0.0</version>
  <description>
    Pick and place demonstration with the baxter research robot in
    collaboration with DFKI Saarbruecken.
  </description>

  <maintainer email="ludersdorfer@fortiss.org">Marvin Ludersdorfer</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/BRML/baxter-pick-and-place.git</url>
  <author email="ludersdorfer@fortiss.org">Marvin Ludersdorfer</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>baxter_core_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
</package>